crates/sifr_python_parser/tests/snapshots/invalid_syntax@expressions__arguments__missing_comma.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/invalid/expressions/arguments/missing_comma.py
---
## AST

```
Module(
    ModModule {
        range: 0..9,
        body: [
            Expr(
                StmtExpr {
                    range: 0..9,
                    value: Call(
                        ExprCall {
                            range: 0..9,
                            func: Name(
                                ExprName {
                                    range: 0..4,
                                    id: "call",
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..9,
                                args: [
                                    Name(
                                        ExprName {
                                            range: 5..6,
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            range: 7..8,
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | call(x y)
  |        ^ Syntax Error: Expected ',', found name
  |
